SERVER-26135 Rearrange code in finishRecovery to avoid invalid iterator warning